--- a/views/index.ejs
+++ b/views/index.ejs
@@ -3,7 +3,10 @@
 
 <head>
     <title>Introduction to WebRTC</title>
-    <link rel="stylesheet" type="text/css" href="style.css" </head>
+    <link rel="stylesheet" type="text/css" href="style.css">
+    </link>
+    <script src="/socket.io/socket.io.js"></script>
+</head>
 
 <body>
     <!-- Select Tag available Camera Device -->
@@ -11,14 +14,7 @@
         Video: <select id="camera"></select>
     </div>
     <!-- Select Tag available Camera Device -->
-    <br>
 
-    <!-- Button to take Profile Picture -->
-    <div>
-        <button id="startbutton">Take photo</button>
-        <button id="clearbutton">Clear photo</button>
-    </div>
-    <!-- Button to take Profile Picture -->
     <br>
 
     <!-- Video Tag auto Play -->
@@ -27,15 +23,18 @@
     </div>
     <!-- Video Tag auto Play -->
 
-    <!-- Adding Canvas to capture frames -->
-    <canvas id="canvas" class="hide"></canvas>
-    <!-- Adding Canvas to capture frames -->
-
-
-    <!-- The output of the image captured -->
-    <div class="output">
-        <img id="photo" alt="The screen capture will appear in this box.">
+    <br>
+    <!-- For Messaging Input Element to Add a name and display it on a output  -->
+    <div>
+        <label>Your Name </label><input type="text" id="myName">
+        <label>Message </label><input type="text" id="myMessage">
+        <input type="submit" id="sendMessage">
+        <div id="chatArea">Message Output:<br></div>
     </div>
+    <!-- For Messaging Input Element to Add a name and display it on a output  -->
+
+
+
     <!-- The output of the image captured -->
     <script>
 
@@ -45,16 +44,13 @@
         // Selecting the select tag to display avalable video devices
         var videoSelect = document.querySelector('#camera');
 
-        // Selecting the Canvas, Photo and StartButton 
-        var canvas = document.getElementById('canvas');
-        var photo = document.getElementById('photo');
-        var startbutton = document.getElementById('startbutton');
 
-
-        // scale the photo width, height to be be computed based on the input stream, initail values of streaming
-        var width = 300;
-        var height = 0;
-        var streaming = false
+        // For Messaging  Selecting the input element in a variable
+        var myName = document.querySelector('#myName')
+        var myMessage = document.querySelector('#myMessage')
+        var sendMessage = document.querySelector('#sendMessage')
+        var chatArea = document.querySelector('#chatArea')
+        var ROOM = 'chat'
 
         // Get info for the available media Device and pass it to getCameras function
         navigator.mediaDevices.enumerateDevices().then(function (sources) {
@@ -67,57 +63,16 @@
         // Init startStream function
         startStream();
 
-        // This is to calculate the height based on streaming boolean and setting on the canvas height and width 
-        videoArea.addEventListener('canplay', function (ev) {
-            if (!streaming) {
-                height = videoArea.videoHeight / (videoArea.videoWidth / width);
+        // For Broadcasting Messages across the room on ready and annouce the message to displayMessage function
+        io = io.connect()
+        io.emit('ready', ROOM)
+        io.on('announce', function (data) {
+            displayMessage(data.message)
+        })
 
-                canvas.setAttribute('width', width);
-                canvas.setAttribute('height', height);
-                streaming = true;
-            }
-        }, false);
-
-
-        // Adding listener to the start button to take Picture
-        startbutton.addEventListener('click', function (e) {
-            takePicture();
-            e.preventDefault()
-        }, false)
-
-
-        // The function to capture currently displayed  video frame and remove class hide
-        function takePicture() {
-            var context = canvas.getContext('2d');
-            if (width && height) {
-                canvas.width = width;
-                canvas.height = height;
-                context.drawImage(videoArea, 0, 0, width, height);
-
-                var data = canvas.toDataURL('image/png');
-                photo.setAttribute('src', data);
-                photo.classList.remove("hide");
-            } else {
-                clearphoto();
-            }
-        }
-
-        // Adding listener to the clear button to clear canvas Picture
-        clearbutton.addEventListener('click', function (e) {
-            clearPhoto();
-            e.preventDefault()
-        }, false)
-
-
-        // Function  to clear Photo and add class hide to photo tag
-        function clearPhoto() {
-            var context = canvas.getContext('2d');
-            context.fillStyle = "#AAA";
-            context.fillRect(0, 0, canvas.width, canvas.height);
-
-            var data = canvas.toDataURL('image/png');
-            photo.setAttribute('src', data);
-            photo.classList.add("hide");
+        // Displaying the message on chatArea
+        function displayMessage(message){
+            chatArea.innerHTML = chatArea.innerHTML + '<br>' + message
         }
 
         // Getting source from enumerateDevices and iterating and creating the option for select video devices
@@ -140,21 +95,9 @@
 
             var constraints = {
                 audio: false,
-                video: {
-                    mandatory: {
-                        minWidth: 300,
-                        minHeight: 300,
-                        maxHeight: 300,
-                        maxWidth: 300
-                    }
-                }
+                video: false
             };
             navigator.getUserMedia(constraints, onSuccess, onError);
-
-            // Hide Default Photo tag 
-            if (photo.src.length <= 0){
-                photo.classList.add("hide");
-            }
 
         }
 
