commented the startStream for message functionality

--- a/views/index.ejs
+++ b/views/index.ejs
@@ -61,7 +61,7 @@
         videoSelect.onChange = startStream;
 
         // Init startStream function
-        startStream();
+        // startStream();
 
         // For Broadcasting Messages across the room on ready and annouce the message to displayMessage function
         io = io.connect()
